syntax = "proto2";

package com.android.car.carlauncher;

option java_package = "com.android.car.carlauncher";
option java_outer_classname = "LauncherItemProto";

message LauncherItemMessage {
  required string package_name = 1;
  required string display_name = 2;
  required int32 relativePosition = 3;
  required int32 containerID = 4;
  required string class_name = 5;
}

message LauncherItemListMessage {
  repeated LauncherItemMessage launcherItemMessage = 1;
}